--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "6.0.0",
     "@angular/platform-browser-dynamic": "6.0.0",
     "@angular/router": "6.0.0",
+    "@ngrx/store": "^6.0.1",
+    "@ngrx/store-devtools": "^6.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.6",
     "rxjs": "6.1.0",
@@ -29,6 +31,7 @@
     "@angular-devkit/build-angular": "~0.6.0",
     "@angular/cli": "^6.0.0",
     "@angular/compiler-cli": "^6.0.0",
+    "@ngrx/schematics": "^6.0.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.109",
     "jasmine-core": "~2.5.2",
